--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;0,800;0,900;1,100&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>Portfolio-GuilhermeRisso</title>
 </head>
 
 <body>
