--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
                 <a href="https://github.com/GuilhermeRisso" target="_blank"><i class='bx bxl-github'></i></a>
                 <a href="tel:+5512996449098" target="_blank"><i class='bx bxl-whatsapp'></i></a>
                 <a href="#" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
-                <a href="https://www.linkedin.com/in/guilherme-eduardo-risso/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.linkedin.com/in/guilherme-eduardo-risso/" target="_blank"><i
+                        class='bx bxl-linkedin'></i></a>
             </div>
-            <a href="./assets/CV-GuilhermeRisso.pdf" download="CV-GuilhermeRisso.pdf" class="btn">Download CV</a>
+            <a href="./assets/GUILHERME RISSO - CV.pdf" download="CV-GuilhermeRisso.pdf" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
@@ -102,7 +103,8 @@
                         fiquem bastante agradável visualmente. experiência nas tecnologias de HTML, CSS e JavaScript.
                         (Projeto não responsivo)
                     </p>
-                    <a href="https://lighthearted-kangaroo-53823c.netlify.app/" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="https://lighthearted-kangaroo-53823c.netlify.app/" target="_blank"><i
+                            class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="porfolio-box">
